# siphra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: gen_ref_pages.py  index.md  quickstart.md
src/siphra/: __init__.py  account.py  currency.py  exceptions.py  ledger.py  transaction.py  types.py
src/siphra/storage/: __init__.py  base.py  memory.py
tests/: conftest.py  test_ledger.py
